fix: refactoring and fixing keycloak admin requests